<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.RegisterActivity"
    android:background="@color/black">

    <ImageView
        android:id="@+id/imageViewLogo"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="233dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/blue_short_8e7b30f73a4020692ccca9c88bafe5dcb6f8a62a4c6bc55cd9ba82bb2cd95f6c" />

    <TextView
        android:id="@+id/textViewRegistro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/userRegistration"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@id/imageViewLogo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/textViewUsuario"
        android:layout_width="320dp"
        android:layout_height="30dp"
        android:text="@string/user"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/textViewRegistro"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="30dp"/>

    <EditText
        android:id="@+id/editTextUsuario"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:hint="@string/insertUser"
        android:inputType="textPersonName"
        android:textColor="@color/white"
        android:textColorHint="#393939"
        app:layout_constraintTop_toBottomOf="@id/textViewUsuario"
        app:layout_constraintStart_toStartOf="@id/textViewUsuario"/>

    <TextView
        android:id="@+id/textViewEmail"
        android:layout_width="320dp"
        android:layout_height="30dp"
        android:text="@string/email"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/editTextUsuario"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="@id/editTextUsuario"/>

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:hint="@string/insertEmail"
        android:inputType="textPersonName"
        android:textColor="@color/white"
        android:textColorHint="@color/darkGrey"
        app:layout_constraintTop_toBottomOf="@id/textViewEmail"
        app:layout_constraintStart_toStartOf="@id/textViewEmail"/>

    <TextView
        android:id="@+id/textViewContrasena"
        android:layout_width="320dp"
        android:layout_height="30dp"
        android:layout_marginTop="28dp"
        android:text="@string/password"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@id/editTextEmail"
        app:layout_constraintTop_toBottomOf="@id/editTextEmail" />

    <EditText
        android:id="@+id/editTextContrasena"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:foregroundTint="@color/black"
        android:hint="@string/insertPassword"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:textColorHint="@color/darkGrey"
        app:layout_constraintTop_toBottomOf="@id/textViewContrasena"
        app:layout_constraintStart_toStartOf="@id/textViewContrasena"/>

    <TextView
        android:id="@+id/textViewConfirmarContrasena"
        android:layout_width="320dp"
        android:layout_height="30dp"
        android:layout_marginTop="28dp"
        android:text="@string/confirmPassword"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@id/editTextContrasena"
        app:layout_constraintTop_toBottomOf="@id/editTextContrasena" />

    <EditText
        android:id="@+id/editTextConfirmarContrasena"
    android:layout_width="320dp"
        android:layout_height="50dp"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:foregroundTint="@color/black"
        android:hint="@string/insertConfirmedPassword"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:textColorHint="@color/darkGrey"
        app:layout_constraintTop_toBottomOf="@id/textViewConfirmarContrasena"
        app:layout_constraintStart_toStartOf="@id/textViewConfirmarContrasena"/>

    <TextView
        android:id="@+id/textViewTelefono"
        android:layout_width="320dp"
        android:layout_height="30dp"
        android:text="@string/phone"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/editTextConfirmarContrasena"
        app:layout_constraintStart_toStartOf="@id/editTextConfirmarContrasena"
        android:layout_marginTop="30dp"
    />

    <EditText
        android:id="@+id/editTextTelefono"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:hint="@string/insertPhone"
        android:inputType="textPersonName"
        android:textColor="@color/white"
        android:textColorHint="@color/darkGrey"
        app:layout_constraintTop_toBottomOf="@id/textViewTelefono"
        app:layout_constraintStart_toStartOf="@id/textViewTelefono"/>

    <Button
        android:id="@+id/button"
        android:layout_width="320dp"
        android:layout_height="60dp"
        android:layout_marginStart="36dp"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/azulTMDB"
        android:text="@string/register"
        app:layout_constraintTop_toBottomOf="@id/editTextTelefono"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="50dp"
        android:onClick="verificarDatosRegistro"
         />

</androidx.constraintlayout.widget.ConstraintLayout>