<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:backgroundTint="@color/black"
    tools:context=".activities.LoginActivity">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="270dp"
        android:onClick="verificarDatos"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/blue_short_8e7b30f73a4020692ccca9c88bafe5dcb6f8a62a4c6bc55cd9ba82bb2cd95f6c" />

    <EditText
        android:id="@+id/editTextPersonName"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_marginStart="41dp"
        android:layout_marginEnd="41dp"
        android:layout_marginBottom="31dp"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:hint="@string/insertUser"
        android:inputType="textPersonName"
        android:textColor="@color/black"
        android:textColorHint="@color/darkGrey"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="320dp"
        android:layout_height="30dp"
        android:text="@string/password"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextNumberPassword"
        app:layout_constraintStart_toStartOf="@+id/editTextNumberPassword"
        app:layout_constraintTop_toBottomOf="@+id/editTextPersonName" />

    <EditText
        android:id="@+id/editTextNumberPassword"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_marginStart="41dp"
        android:layout_marginEnd="41dp"
        android:layout_marginBottom="25dp"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:foregroundTint="@color/black"
        android:hint="@string/insertPassword"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:textColorHint="@color/darkGrey"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="320dp"
        android:layout_height="30dp"
        android:text="@string/user"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextPersonName"
        app:layout_constraintStart_toStartOf="@+id/editTextPersonName"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <Button
        android:id="@+id/button"
        android:layout_width="320dp"
        android:layout_height="60dp"
        android:layout_marginStart="36dp"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/azulTMDB"
        android:onClick="verificarDatos"
        android:text="@string/login"
        app:layout_constraintBottom_toTopOf="@+id/outlinedButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumberPassword" />

    <Button
        android:id="@+id/outlinedButton"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="320dp"
        android:layout_height="60dp"
        android:layout_marginBottom="52dp"
        android:text="@string/register"
        android:textColor="@color/white"
        android:onClick="registrar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button"
        app:strokeColor="@color/azulTMDB"
        app:strokeWidth="2dp" />

</androidx.constraintlayout.widget.ConstraintLayout>