<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".activities.MainActivity">


    <ImageView
        android:id="@+id/portadaInicio"
        android:layout_width="0dp"
        android:layout_height="400dp"
        android:adjustViewBounds="true"
        android:background="#222222"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView13"
        android:layout_width="62dp"
        android:layout_height="58dp"
        app:srcCompat="@drawable/twitterlogo"
        tools:layout_editor_absoluteX="226dp"
        tools:layout_editor_absoluteY="248dp"
        app:layout_constraintStart_toEndOf="@id/imageView12"
        app:layout_constraintEnd_toStartOf="@id/imageView14"
        app:layout_constraintTop_toTopOf="@id/imageView12"/>

    <ImageView
        android:id="@+id/imageView14"
        android:layout_width="2dp"
        android:layout_height="100dp"
        android:background="@color/white"
        tools:layout_editor_absoluteX="304dp"
        tools:layout_editor_absoluteY="248dp"
        app:layout_constraintStart_toEndOf="@id/imageView12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/portadaInicio"
        app:layout_constraintTop_toBottomOf="@id/imageView6"
        android:layout_marginBottom="30dp"/>

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/twitter"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="@id/imageView12"
        app:layout_constraintEnd_toStartOf="@id/imageView14"
        app:layout_constraintStart_toEndOf="@id/imageView12" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/moreOptions"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="@id/imageView12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/imageView14" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:text="..."
        android:textColor="#FFFFFF"
        android:textSize="48sp"
        app:layout_constraintBottom_toBottomOf="@id/imageView13"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/imageView14"
        app:layout_constraintTop_toTopOf="@id/imageView13" />

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="62dp"
        android:layout_height="58dp"
        app:srcCompat="@drawable/facebooklogo"
        tools:layout_editor_absoluteX="134dp"
        tools:layout_editor_absoluteY="248dp"
        app:layout_constraintStart_toEndOf="@id/imageView9"
        app:layout_constraintEnd_toStartOf="@id/imageView12"
        app:layout_constraintTop_toTopOf="@id/imageView12"/>

    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="2dp"
        android:layout_height="100dp"
        android:background="@color/white"
        tools:layout_editor_absoluteX="204dp"
        tools:layout_editor_absoluteY="248dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/portadaInicio"
        app:layout_constraintTop_toBottomOf="@id/imageView6"
        android:layout_marginBottom="30dp"/>

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/messenger"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toEndOf="@id/imageView9"
        app:layout_constraintEnd_toStartOf="@id/imageView12"
        app:layout_constraintBottom_toBottomOf="@id/imageView12"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="5dp"
        android:text="@string/tellYourFriends"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView8"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="689dp"
        android:text="@string/shareThisLink"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="169dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="171dp"
        android:background="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/portadaInicio"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="19dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/imageView6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        app:layout_constraintTop_toTopOf="@+id/imageView6" />



    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/copyLink"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView7"
        app:layout_constraintEnd_toEndOf="@+id/imageView7"
        app:layout_constraintStart_toStartOf="@+id/imageView7"
        app:layout_constraintTop_toTopOf="@+id/imageView7"
        app:layout_constraintVertical_bias="0.583" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="2dp"
        android:text="https://www.themoviedb..."
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/imageView7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView7" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="17dp"
        android:layout_marginEnd="7dp"
        android:src="@android:drawable/sym_action_chat"
        app:layout_constraintTop_toTopOf="@+id/textView4"
        app:layout_constraintBottom_toBottomOf="@+id/textView4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textView4"/>


    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="2dp"
        android:layout_height="100dp"
        android:background="@color/white"
        tools:layout_editor_absoluteX="119dp"
        tools:layout_editor_absoluteY="248dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/imageView12"
        app:layout_constraintBottom_toBottomOf="@id/portadaInicio"
        app:layout_constraintTop_toBottomOf="@id/imageView6"
        android:layout_marginBottom="30dp"/>

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="62dp"
        android:layout_height="58dp"
        app:srcCompat="@drawable/whatsapplogonew"
        tools:layout_editor_absoluteX="30dp"
        tools:layout_editor_absoluteY="248dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/imageView9"
        app:layout_constraintTop_toTopOf="@id/imageView9"/>

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/whatsapp"
        android:textColor="#FFFFFF"
        tools:layout_editor_absoluteX="29dp"
        tools:layout_editor_absoluteY="316dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="@id/imageView9"
        app:layout_constraintBottom_toBottomOf="@id/imageView9"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:text="@string/appConfiguration"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/portadaInicio" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/account"
        android:textSize="20sp"
        tools:layout_editor_absoluteX="24dp"
        tools:layout_editor_absoluteY="484dp"
        app:layout_constraintTop_toBottomOf="@id/textView13"
        app:layout_constraintStart_toStartOf="@id/textView13"
        app:layout_constraintBottom_toTopOf="@id/textView15"/>

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/help"
        android:textSize="20sp"
        tools:layout_editor_absoluteX="24dp"
        tools:layout_editor_absoluteY="534dp"
        app:layout_constraintTop_toBottomOf="@id/textView14"
        app:layout_constraintBottom_toTopOf="@id/textView16"
        app:layout_constraintStart_toStartOf="@id/textView14"/>

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reportError"
        android:textSize="20sp"
        tools:layout_editor_absoluteX="24dp"
        tools:layout_editor_absoluteY="591dp"
        app:layout_constraintTop_toBottomOf="@id/textView15"
        app:layout_constraintBottom_toTopOf="@id/textView17"
        app:layout_constraintStart_toStartOf="@id/textView15"
        android:onClick="enviarEmail"/>

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        android:textSize="20sp"
        tools:layout_editor_absoluteX="24dp"
        tools:layout_editor_absoluteY="645dp"
        app:layout_constraintTop_toBottomOf="@id/textView16"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/textView16"
        android:layout_marginBottom="120dp"
        />


</androidx.constraintlayout.widget.ConstraintLayout>